--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js"
   },
@@ -11,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "archiver": "^7.0.1",
     "axios": "^1.3.4",
     "cheerio": "^1.0.0-rc.12",
     "csv-parser": "^3.0.0",
@@ -18,6 +20,7 @@
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "fs": "^0.0.1-security",
+    "fs-extra": "^11.2.0",
     "handlebars": "^4.7.7",
     "hbs": "^4.2.0",
     "jquery": "^3.6.3",
@@ -25,7 +28,6 @@
     "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "pdf-creator-node": "^2.3.5",
-    "puppeteer": "^19.7.2",
     "request": "^2.88.2",
     "slugify": "^1.6.5"
   },
