--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "pdf-creator-node": "^2.3.5",
+    "puppeteer": "^22.9.0",
     "request": "^2.88.2",
     "slugify": "^1.6.5"
   },
