--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "archiver": "^7.0.1",
     "axios": "^1.3.4",
     "cheerio": "^1.0.0-rc.12",
     "csv-parser": "^3.0.0",
@@ -27,6 +26,7 @@
     "marked": "^4.2.12",
     "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
+    "node-xlsx": "^0.24.0",
     "pdf-creator-node": "^2.3.5",
     "puppeteer": "^22.9.0",
     "request": "^2.88.2",
