--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
+    "form-data": "^4.0.1",
     "fs": "^0.0.1-security",
     "fs-extra": "^11.2.0",
     "handlebars": "^4.7.7",
